[package]
name = "eightfetch"
version = "1.1.1"
edition = "2021"
description = "Blazing fast system fetch tool — 63x faster than myfetch (C), 2.4x faster than fastfetch"
license = "MIT"
repository = "https://github.com/quinnyfoco_design/eightfetch"
homepage = "https://github.com/quinnyfoco-design/eightfetch"
keywords = ["fetch", "system-info", "neofetch", "fastfetch"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "8fetch"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
